XMLExper/m12/m12_469_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1713:57: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 1713 |     if ( /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node) && node->ToText() ) {
      |                                                         ^
diff: tinyxml2.S: No such file or directory
